--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "url": "git+https://github.com/poopoothegorilla/platformer_game.git"
   },
   "author": "Jim Walker",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/poopoothegorilla/platformer_game/issues"
   },
@@ -21,6 +20,9 @@
     "webpack": "^v1.13.0",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.3.13"
+    "babel-preset-es2015": "^6.3.13",
+    "expose-loader": "",
+    "script-loader": "^0.6.1",
+    "phaser": "^2.4.6"
   }
 }
