--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "babel-preset-es2015": "^6.3.13",
     "expose-loader": "",
     "script-loader": "^0.6.1",
-    "phaser": "^2.4.6"
+    "phaser": "photonstorm/phaser#dev"
   }
 }
